--- a/Places.html
+++ b/Places.html
@@ -13,18 +13,23 @@
     <header>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
-          <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed"
-              data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+          <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed"
+
+              data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+
               aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span> <span class="icon-bar"></span> <span
+              <span class="icon-bar"></span> <span class="icon-bar"></span> <span
+
                 class="icon-bar"></span> </button>
             <div class="row"> <a class="navbar-brand" href="index.html">
                   Adventure Diaries<br>
-                <!--&ensp;&ensp;&ensp;&ensp;Tours & Treks--> </a> <img style="width:50px; height:50px;"
+                <!--&ensp;&ensp;&ensp;&ensp;Tours & Treks--> </a> <img style="width:50px; height:50px;"
+
                 src="images/icAD.png"> </div>
           </div>
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"
+
             style="float: right">
             <ul class="nav navbar-nav">
               <li><a href="tours.html">Tours</a></li>
@@ -59,17 +64,17 @@
           <div class="row">
             <div class="col">
               <div class="thumbnail"> <img src="images/tent1.jpeg" alt="bario highlands">
-                <div class="caption">
-                  <h3>Gangamaya Park</h3>
-                  <p> Gangamaya park is about 13km from Darjeeling.It is named
-                    after an innocent victim of police firing during the GNLF
-                    agitation in 1986. </p>
-                  <p> It meanders down the course of a chanting mountain
-                    streams,Clumps of flowering shrubs and trees over humped
-                    backed bridges and into a circular lake with a beautiful
-                    waterfall. </p>
-                </div>
-              </div>
+             
+              <div class="caption">
+                <h3>Gangamaya Park</h3>
+                <p> Gangamaya park is about 13km from Darjeeling.It is named
+                   after an innocent victim of police firing during
+                  the GNLF agitation in 1986. </p>
+                <p> It meanders down the course of a chanting mountain
+                  streams,Clumps of flowering shrubs and trees over humped
+                  backed bridges and into a circular lake with a beautiful
+                  waterfall. </p>
+              </div> </div>
             </div>
           </div>
           <div class="row">
