--- a/FourPoints.html
+++ b/FourPoints.html
@@ -146,7 +146,7 @@
               <div class="item active"> <img src="images/tigerhill.jpeg">
                 <div class="carousel-caption">
                   <h3>Tiger Hill</h3>
-                  <p> Sunrise at Tiger Hill, Darjeeling</p>
+                  <p> Sunrise from  Tiger Hill view point, Darjeeling</p>
                 </div>
               </div>
               <div class="item"> <img src="images/sinchel.jpeg">
